--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>Sabor & Cia | Lanchonete</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/src/img/favicon.png" type="image/x-icon">
     <style>
       body {
         font-family: 'Inter', sans-serif;
